error fixed new

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <menu>
              <div id="menu-list">
                 <ul><h3>
-                    <li> <a class="menu" href= "housing.html"><b>Housing</b></a></li>
+                    <li> <a class="menu" href= "../html/housing.html"><b>Housing</b></a></li>
                     <li> <a class="menu" href= "#"><b>Feeding</b></a></li>
                     <li> <a class="menu" href= "#"><b>Grooming</b></a></li>
                     <li> <a class="menu" href= "#"><b>Health</b></a></li>
