--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../style/style1.css">
+        <link rel="stylesheet type=text/css" href="style/style1.css">
         <meta charset="UTF-8">
         <meta name="description" content= "Here you will have the knowlegde you need about rabbits. You can depend on us for all information you need about does and roes.">  
         <title>evolving site</title>
     </head>
     <br/>
     <body id="bodily">
-        <img height="200px" width="300px" src="../img/doe.jpg" alt= "lovely doe">
-        <h1 id="heading">welcome to the rabbit world</h1>
+        <img height="200px" width="300px" src="img/doe.jpg" alt= "lovely doe">
+        <h1 id="heading"><b>welcome to the rabbit world</b></h1></h1>
         <header>
             <menu>
              <div id="menu-list">
                 <ul><h3>
-                    <li> <a class="menu" href= "../html/housing.html"><b>Housing</b></a></li>
+                    <li> <a class="menu" href= "html/housing.html"><b>Housing</b></a></li>
                     <li> <a class="menu" href= "#"><b>Feeding</b></a></li>
                     <li> <a class="menu" href= "#"><b>Grooming</b></a></li>
                     <li> <a class="menu" href= "#"><b>Health</b></a></li>
