--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html>
+ <html lang="eng-us">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet">
    <link rel="stylesheet type=text/css" href="style/style1.css">
@@ -11,11 +11,12 @@
 <br/>
   <body>
   <div id="main">
+   <main>
    <div id="welcome">
-    <header id="header"><h1>welcome to the rabbit world...</header>
+    <header id="header"><h1>welcome to the rabbit world...<mh1></header>
     <form class="form">
      <input type="text" value="search">
-     <button type="get">go</button>
+     <button type="submit">go</button>
     </form>
    </div>
 
@@ -23,7 +24,7 @@
 <br/>
   <main>
    <article><h2>Description</h2>
-    <p> <p>Rabbits are wonderfully quiet animals with lots of cool characteristics.
+    <p>Rabbits are wonderfully quiet animals with lots of cool characteristics.
             Owning a rabbit can open up a wide privilege for pouring out your emotions
             as they serve as beautiful and intelligent companions,
             There are different types of rabbits and classifications can be:
@@ -35,6 +36,7 @@
              uniquely territorial and fight to the death to keep their territory.
              this uniqueness also protects them from predators. 
         </p>
+    </article>
    <div class="img">
         <img src="img/doe.jpg" alt= "lovely doe">
         <img src="img/doe2.jpg" alt= "lovely doe">
@@ -88,6 +90,7 @@
   </div>
  <br/>
   <footer id="footer">copyright gokup4u 2020.</footer>
+  </div>
   </div>
  </body>
 </html>
