--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html lang="eng-us">
+ <html lang="english-us">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet">
    <link rel="stylesheet type=text/css" href="style/style1.css">
@@ -8,12 +8,12 @@
    <meta name="description" content= "Here you will have the knowlegde you need about rabbits. You can depend on us for all information you need about does and roes.">  
    <title>evolving site</title>
   </head>
-<br/>
+
   <body>
   <div id="main">
    <main>
    <div id="welcome">
-    <header id="header"><h1>welcome to the rabbit world...<mh1></header>
+    <header id="header"><h1>welcome to the rabbit world...</h1></header>
     <form class="form">
      <input type="text" value="search">
      <button type="submit">go</button>
@@ -22,7 +22,7 @@
 
 <br/>
 <br/>
-  <main>
+
    <article><h2>Description</h2>
     <p>Rabbits are wonderfully quiet animals with lots of cool characteristics.
             Owning a rabbit can open up a wide privilege for pouring out your emotions
@@ -34,8 +34,8 @@
           </ol>
             they are also grouped according to their species. Interestingly, rabbits are
              uniquely territorial and fight to the death to keep their territory.
-             this uniqueness also protects them from predators. 
-        </p>
+             this uniqueness also protects them from predators.</p>
+        
     </article>
    <div class="img">
         <img src="img/doe.jpg" alt= "lovely doe">
@@ -91,7 +91,7 @@
  <br/>
   <footer id="footer">copyright gokup4u 2020.</footer>
   </div>
-  </div>
+  
  </body>
 </html>
   
