--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         
     </article>
    <div class="img">
-        <img src="img/doe.jpg" alt= "lovely doe">
-        <img src="img/doe2.jpg" alt= "lovely doe">
-        <img src="img/doe3.jpg" alt= "lovely doe">
-        <img src="img/image-8.jpg" alt= "lovely doe">
+      <div id="img1"><img src="img/doe.jpg" alt= "lovely doe"></div>
+      <div id="img2"><img src="img/doe2.jpg" alt= "lovely doe"></div>
+      <div id="img3"><img src="img/doe3.jpg" alt= "lovely doe"></div>
+      <div id="img4"><img src="img/image-8.jpg" alt= "lovely doe"></div>
    </div>
    </main>
    <div class="sidebar">
