--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
     </header>
     
 
-<H1 id="title">survey form</H1>
-<p id="description">This is a form for collating data</p>
-
 
 
    </div>
@@ -106,7 +103,11 @@
         <a href="#">continue reading...</a>
      </div>
     </div>
-  <div class="form">
+     <div id="survey-form">
+<H1 id="title">survey form</H1>
+<p id="description">This is a form for collating data</p>
+
+
     <form id="survey-form">
  <ul>
   <li>
@@ -147,6 +148,7 @@
 </li>
  </ul>
 </form>
+</div>
 </sidebar>
   </div>
 </div>
