--- a/index.html
+++ b/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
  <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet">
    <link rel="stylesheet type=text/css" href="style/style1.css">
    <meta charset="UTF-8">
    <meta name="author" content="Adegoke Omisakin">
    <meta name="description" content= "Here you will have the knowlegde you need about rabbits. You can depend on us for all information you need about does and roes.">  
-   <title>evolving site</title>
+   <title>Rabbit territory</title>
   </head>
-<body id= "body">
-    <header id = "heading">
-      <div class = "firdiv">
-        <header><h1>Rabbitory is fun</h1></header>
-        <nav id = "navigate">
-          <ul class = "navlist">
-            <li>Home</li>
-            <li>Blog</li>
-            <li>About us</li>
-            <li>Contact us</li>
-          </ul>
-        </nav>
+<body>
+    
+      <div class="header">
+        <h1>Rabbitary is fun</h1>
       </div>
-    </header>
+    <div class = "nav-div">
+      <div class = "nav-left">
+        <div class="nav-link">
+          <a href= "#" target="_blank">Home</a>
+          <a href= "#" target="_blank">Blog</a>
+          <a href= "#" target="_blank">About</a>
+          <a href= "#" target="_blank">Contact</a>
+        </div>
+      </div>
+      <div class="nav-right">
+        <div class="logo-img">
+          <img src= "img/image-6.jpg">
+        </div>
+      </div>
+    </div>
     <main>
-      <p></p>
-      <img class= "images" src= "../img/doe2.jpg" alt="lovely doe">
-      <img class= "images" src= "../img/doe4.jpg" alt= "cute doe">
+      <div class="main-content">
+        <p class = "pcontent">By current zoological classification, the order <em>Lagomorpha</em> is split into two large families: the <em>Ochotonidae</em> and <em>Leporidae</em>.</p>
+        <p class = "pcontent">Rabbits and hares are members of the <em>Leporidae</em> family. </p>
+        <img class= "images" src= "img/doe2.jpg" alt="lovely doe">
+        <p class = "pcontent">The taxonomic classification of the <em>Leporidae</em> proposed by <strong>Wilson and Reeder </strong>(1993) has been accepted as divided into 11 genera, </p>
+        <p class = "pcontent">one of which, the genus <em>Sylvilagus</em>, deserves special mention due to the widespread presence throughout the North American continent of its 13 species</p>
+        <p class = "pcontent"> (known as the cottontail, among which is <em>Sylvilagus floridanus</em>, known in Europe as the “mini-hare”). </p>
+        <p class = "pcontent">Two members of the family are the genus <em>Lepus</em>, with its 30 species of hares originally from the Old World,</p>
+        <p> and the genus Oryctolagus, also originally from Europe, which has only one species, Oryctolagus cuniculus, or the European rabbit. </p>
+        <p class = "pcontent">The three genera (Figure 1) differ in the number of chromosomes (Sylvilagus 2n = 42; Lepus 2n = 48; Oryctolagus 2n = 44),</p>
+        <p class = "pcontent">so crossmatings are infertile and do not generate crossbreeds (Robinson et al., 2002).</p>
+        
+        <img class= "images" src= "img/doe4.jpg" alt= "cute doe">
+      </div>
     </main>
-    <sidebar>
-      <form></form>
-    </sidebar>
-    <footer class = "foot"><h4>copyright @Adegoke</h4></footer>
+    <div class="sidebar">
+      <form>
+        <input placeholder= "Email" type= "text">
+        <br>
+        <input placeholder = "Password" type = "password">
+        <br>
+        <input placeholder = "textarea" type= "text" minlength="25" maxlength="100">
+        <button class="button">Submit</button>
+      </form>
+    </div>
+    <div class="footer-bar">
+      <footer><h4>copyright @Adegoke</h4></footer>
+    </div>
   </body>
+  </html>
