--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         </div>
       </div>
     </div>
-    <main>
+    <div class="main-wrapper">
+     <main>
       <div class="main-content">
+        <h3>Little introduction to the rabbit world.</h3>
         <p class = "pcontent">By current zoological classification, the order <em>Lagomorpha</em> is split into two large families: the <em>Ochotonidae</em> and <em>Leporidae</em>.</p>
         <p class = "pcontent">Rabbits and hares are members of the <em>Leporidae</em> family. </p>
         <img class= "images" src= "img/doe2.jpg" alt="lovely doe">
@@ -36,25 +38,32 @@
         <p class = "pcontent">one of which, the genus <em>Sylvilagus</em>, deserves special mention due to the widespread presence throughout the North American continent of its 13 species</p>
         <p class = "pcontent"> (known as the cottontail, among which is <em>Sylvilagus floridanus</em>, known in Europe as the “mini-hare”). </p>
         <p class = "pcontent">Two members of the family are the genus <em>Lepus</em>, with its 30 species of hares originally from the Old World,</p>
-        <p> and the genus Oryctolagus, also originally from Europe, which has only one species, Oryctolagus cuniculus, or the European rabbit. </p>
+        <p class = "pcontent"> and the genus Oryctolagus, also originally from Europe, which has only one species, Oryctolagus cuniculus, or the European rabbit. </p>
         <p class = "pcontent">The three genera (Figure 1) differ in the number of chromosomes (Sylvilagus 2n = 42; Lepus 2n = 48; Oryctolagus 2n = 44),</p>
         <p class = "pcontent">so crossmatings are infertile and do not generate crossbreeds (Robinson et al., 2002).</p>
         
         <img class= "images" src= "img/doe4.jpg" alt= "cute doe">
       </div>
-    </main>
-    <div class="sidebar">
-      <form>
-        <input placeholder= "Email" type= "text">
-        <br>
-        <input placeholder = "Password" type = "password">
-        <br>
-        <input placeholder = "textarea" type= "text" minlength="25" maxlength="100">
-        <button class="button">Submit</button>
-      </form>
-    </div>
+       <div class="sidebar">
+        <sidebar>
+           <form>
+            <input placeholder= "Email" type= "text">
+            <br>
+            <input placeholder = "Password" type = "password">
+            <br>
+            <input placeholder = "Comment" type= "text" minlength="25" maxlength="100">
+            <button class="button">Submit</button>
+           </form>
+        </sidebar>
+       </div> 
+     </main>
+    </div>  
+    <br>
+    <br>
     <div class="footer-bar">
       <footer><h4>copyright @Adegoke</h4></footer>
+      <h5>Like us on <a href="https://web.facebook.com/gokup4u/">facebook</a></h5>
+      <h5>follow us on <a href="https://twitter.com/oluwapelumi4u">twitter</a></h5>
     </div>
   </body>
   </html>
