new-pages-design

--- a/pictures.html
+++ b/pictures.html
@@ -2,7 +2,7 @@
  <html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-   <link rel="stylesheet type=text/css" href="style/style1.css">
+   <link rel="stylesheet type=text/css" href="style/pixstyle.css">
    <meta charset="UTF-8">
    <meta name="author" content="Adegoke Omisakin">
    <meta name="description" content= "Here you will have the knowlegde you need about rabbits. You can depend on us for all information you need about does and roes.">  
@@ -34,6 +34,7 @@
     <div class="main-wrapper">
      <main>
       <div class="main-content">
+      
        <div class="sidebar">
         <sidebar>
            <form>
