--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       </div>
       <div class="nav-right">
         <div class="logo-img">
-          <img src= "img/image-6.jpg">
+          <a href= "index.html"><img src= "img/image-6.jpg"></a>
         </div>
       </div>
     </div>
