--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="nav-right">
         <div class="logo-img">
-          <img src= "img/image-6.jpg">
+          <a href= "index.html"><img src= "img/image-6.jpg"></a>
         </div>
       </div>
     </div>
@@ -70,6 +70,7 @@
      <div class="blogspot">
        <h3>Housing styles</h3>
        <p>come and see.</p>
+       <iframe width="360" height="215" src="https://www.youtube.com/embed/Uj14WeHTa1A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
      </div>
     </div>
     <br>
