--- a/index.html
+++ b/index.html
@@ -53,17 +53,26 @@
       <br>
        <div class="sidebar">
         <sidebar>
-           <form>
-            <label for="email">Email:</label>
-            <input class ="form-content1" placeholder= "Email" type= "text">
-            <br>
-            <label for="password">Password:</label>
-            <input class ="form-content2" placeholder = "Password" type = "password">
-            <br>
-            <label for="comment">Leave a comment:</label>
-            <input class ="form-content3" placeholder = "Comment" type= "text" minlength="25" maxlength="100">
-            <button class="button">Submit</button>
-           </form>
+          <form>
+            <table>
+             <tr>
+               <td><label for="email">Email:</label></td>
+               <td><input id ="email" placeholder= "Email" type="email" name="mail" value="email"></td>
+             </tr> 
+             <tr>
+              <td><label for="password">Password:</label></td>
+              <td><input id ="password" placeholder = "Password" type = "password" name="pass" value="password" !important></td>
+             </tr> 
+             <tr>
+              <td><label for="comment">Comments:</label></td>
+              <td><textarea id ="comment" placeholder = "Comment" type= "text" minlength="25" maxlength="100"></textarea></td>
+             </tr> 
+             <tr>
+              <td></td>
+              <td><button id="button" value="submit" name="button">Submit</button></td>
+             </tr>
+           </table>
+          </form>
         </sidebar>
        </div> 
      </main>
