--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
 <body>
     <div class="container">
-      <div class="header">
+      <header class="header">
         <h1>Rabbitary is fun</h1>
-      </div>
-    <div class = "nav-div">
+      </header>
+    <nav class = "nav-div">
       <div class = "nav-left">
         <div class="nav-link">
           <a href= "index.html" target="_blank">Home</a>
@@ -30,7 +30,7 @@
           <a href= "index.html"><img src= "img/image-6.jpg"></a>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="main-wrapper">
      <main>
       <div class="main-content">
@@ -57,7 +57,7 @@
             <table>
              <tr>
                <td><label for="email">Email:</label></td>
-               <td><input id ="email" placeholder= "Email" type="email" name="mail" value="email"></td>
+               <td><input id ="email" placeholder="Email" type="email" name="mail" value="email"></td>
              </tr> 
              <tr>
               <td><label for="password">Password:</label></td>
@@ -77,18 +77,22 @@
        </div> 
      </main>
      <div class="blogspot">
-       <h3>Housing styles</h3>
-       <p>come and see.</p>
+      <a href= "blogspot.html" target="_blank"><h2>Recent posts</h2></a>
+       <h4>Housing Styles</h4>
+       <h4>Rabbit Health</h4>
+       <h4>Reproduction</h4>
+       <h4>Health Issues</h4>
+       <h4>Commercial Purpose</h4>
        <iframe width="360" height="215" src="https://www.youtube.com/embed/Uj14WeHTa1A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
      </div>
     </div>
     <br>
     <br>
-    <div class="footer-bar">
-      <footer><h4>copyright @Adegoke</h4></footer>
+    <footer class="footer-bar">
+      <h4>copyright &copy;Adegoke</h4>
       <h5>Like us on <a href="https://web.facebook.com/gokup4u/">facebook</a></h5>
       <h5>follow us on <a href="https://twitter.com/oluwapelumi4u">twitter</a></h5>
-    </div>
+    </footer>
   </div> 
   </body>
   </html>
