--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
       </div>
       <br>
       <br>
-      <br>
-      <br>
        <div class="sidebar">
         <sidebar>
           <form>
@@ -69,7 +67,7 @@
              </tr> 
              <tr>
               <td></td>
-              <td><button id="button" value="submit" name="button">Submit</button></td>
+              <td><input type="submit" id="button" value="submit"></td>
              </tr>
            </table>
           </form>
