--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <div class="main-wrapper">
      <main>
-      <div class="main-content">
+      <section class="main-content">
         <h3>Little introduction to the rabbit world.</h3>
         <p class = "pcontent">By current zoological classification, the order <em>Lagomorpha</em> is split into two large families: the <em>Ochotonidae</em> and <em>Leporidae</em>.</p>
         <p class = "pcontent">Rabbits and hares are members of the <em>Leporidae</em> family. </p>
@@ -46,11 +46,10 @@
         <p class = "pcontent">The three genera (Figure 1) differ in the number of chromosomes (Sylvilagus 2n = 42; Lepus 2n = 48; Oryctolagus 2n = 44),</p>
         <p class = "pcontent">so crossmatings are infertile and do not generate crossbreeds (Robinson et al., 2002).</p>  
         <img class= "images" src= "img/doe4.jpg" alt= "cute doe">
-      </div>
+        </section>
       <br>
       <br>
-       <div class="sidebar">
-        <sidebar>
+       <div class="form-area">
           <form>
             <table>
              <tr>
@@ -71,10 +70,9 @@
              </tr>
            </table>
           </form>
-        </sidebar>
        </div> 
      </main>
-     <div class="blogspot">
+     <sidebar class="blogspot">
       <a href= "blogspot.html" target="_blank"><h2>Recent posts</h2></a>
        <h4>Housing Styles</h4>
        <h4>Rabbit Health</h4>
@@ -82,7 +80,7 @@
        <h4>Health Issues</h4>
        <h4>Commercial Purpose</h4>
        <iframe width="360" height="215" src="https://www.youtube.com/embed/Uj14WeHTa1A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
-     </div>
+     </sidebar>
     </div>
     <br>
     <br>
